--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hapi": "^11.1.3",
+    "koa": "^1.2.0",
+    "koa-body": "^1.4.0",
+    "koa-logger": "^1.3.0",
+    "koa-router": "^5.4.0",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "promise-redis": "0.0.5",
+    "socket.io": "^1.4.6",
     "tcomb": "^2.5.2"
   }
 }
